--- a/src/styles/modules/topnav-layout.less
+++ b/src/styles/modules/topnav-layout.less
@@ -5,7 +5,9 @@
     position: absolute;
     width: @left-width;
     margin-left: 16px;
-
+    a img{
+      vertical-align: text-bottom!important;
+    }
     @media @small {
       margin-left: 0;
     }
